# nn_from_scratch

./: .gitignore  LICENSE  README.md  autograd.py  autograd_test.py  func_approx_torch.py  function_approximation.py  layers.py  layers_test.py  losses.py  nn.py  optimizer.py  pyproject.toml  pyrightconfig.json  sympy_test.py  train.py
examples/: func_approx_torch.py  function_approximation.py  function_approximation_pytorch.py  training_common.py  visualize_computational_graph.py
nn_from_scratch/: graph_drawing.py  layers.py  losses.py
notes/: Numpy_notes.md  batch_sized_input.md
src/nn_from_scratch/: autograd.py  graph_drawing.py  layers.py  losses.py  optimizer.py
test/: autograd_test.py  layers_test.py  test_autograd.py  test_layers.py  test_losses.py
tutorial/: batch_sized_input.md
